--- a/css/homepage/homepageFaq.css
+++ b/css/homepage/homepageFaq.css
@@ -105,7 +105,7 @@
 }
 
 #faq-title {
-  margin-top: 279px;
+  /* margin-top: 279px; */
   position: relative;
   box-sizing: border-box;
   min-width: 100vw;
