--- a/css/contact_us_form.css
+++ b/css/contact_us_form.css
@@ -108,6 +108,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
+  padding-bottom: 20px;
   line-height: 27px;
   color: #ffffff;
   gap: 12px;
