--- a/css/main.css
+++ b/css/main.css
@@ -72,10 +72,18 @@ header {
 	z-index: 200;
 }
 
+html {
+	scroll-behavior: smooth;
+  }
+
 header ul {
 	padding: 0;
 	margin: 0;
 }
+
+#contact-us {
+	padding-top: 60px; 
+  }
 
 footer {
 	margin-top: 271px;
