--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   font-family: "General Sans";
   line-height: 1.5;
   margin: 0px;
+  font-size: 18px;
   padding: 0px;
   max-width: 100%;
   overflow-x: hidden;
