--- a/css/careers.css
+++ b/css/careers.css
@@ -306,9 +306,9 @@ background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
    ======================================== */
 
 .careers-process-section {
-  padding: 80px 20px;
+  padding: 200px 20px;
   /* background: linear-gradient(to bottom, #f8f9fa 0%, #ffffff 100%); */
-    background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+    /* background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%); */
 }
 
 .process-timeline {
